--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -370,17 +370,17 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="6fa285042cef454a85ae2547729e1eef-8769d6932ec14a11b221a5094cf763ea" name="6fa285042cef454a85ae2547729e1eef" class="tab" checked><label for="6fa285042cef454a85ae2547729e1eef-8769d6932ec14a11b221a5094cf763ea" >General</label>
-<input type="radio" id="6fa285042cef454a85ae2547729e1eef-2d6f05aabc2b41efa0993b48ca36edcb" name="6fa285042cef454a85ae2547729e1eef" class="tab" ><label for="6fa285042cef454a85ae2547729e1eef-2d6f05aabc2b41efa0993b48ca36edcb" >Startup</label>
-<input type="radio" id="6fa285042cef454a85ae2547729e1eef-d0b46934cb74445fa6484f7715906822" name="6fa285042cef454a85ae2547729e1eef" class="tab" ><label for="6fa285042cef454a85ae2547729e1eef-d0b46934cb74445fa6484f7715906822" >Android</label>
-<input type="radio" id="6fa285042cef454a85ae2547729e1eef-fa0bc2c359914307a45c56e88c20515a" name="6fa285042cef454a85ae2547729e1eef" class="tab" ><label for="6fa285042cef454a85ae2547729e1eef-fa0bc2c359914307a45c56e88c20515a" >iOS</label>
+<input type="radio" id="3cfde0cd1652447fa4ac1f83d57508ba-b0b82c0616964863a0fef3a537cb5343" name="3cfde0cd1652447fa4ac1f83d57508ba" class="tab" checked><label for="3cfde0cd1652447fa4ac1f83d57508ba-b0b82c0616964863a0fef3a537cb5343" >General</label>
+<input type="radio" id="3cfde0cd1652447fa4ac1f83d57508ba-4ef38e1951f948659cffdb9ab8d9762d" name="3cfde0cd1652447fa4ac1f83d57508ba" class="tab" ><label for="3cfde0cd1652447fa4ac1f83d57508ba-4ef38e1951f948659cffdb9ab8d9762d" >Startup</label>
+<input type="radio" id="3cfde0cd1652447fa4ac1f83d57508ba-d39ffb5b426d40c295e0cfa45b8894a7" name="3cfde0cd1652447fa4ac1f83d57508ba" class="tab" ><label for="3cfde0cd1652447fa4ac1f83d57508ba-d39ffb5b426d40c295e0cfa45b8894a7" >Android</label>
+<input type="radio" id="3cfde0cd1652447fa4ac1f83d57508ba-e9a2ebada699499a85164b7fe890be6c" name="3cfde0cd1652447fa4ac1f83d57508ba" class="tab" ><label for="3cfde0cd1652447fa4ac1f83d57508ba-e9a2ebada699499a85164b7fe890be6c" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Beacons.IBeaconRangingManager
+|Service|Shiny.Beacons.IBeaconRangingManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Beacons/" target="Shiny.Beacons"><img src="https://img.shields.io/nuget/v/Shiny.Beacons.svg?style=for-the-badge&label=Shiny.Beacons" /></a>|
-|Static Generated Class|ShinyBeaconRangingManager</p>
+|Static Generated Class|ShinyBeaconRangingManager|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
