--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -368,19 +368,19 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="5fdcd230fb834d46b0dab810d7b02424-0c3e5c0b342648859e4e70fb8ab8ef5c" name="5fdcd230fb834d46b0dab810d7b02424" class="tab" checked=""><label for="5fdcd230fb834d46b0dab810d7b02424-0c3e5c0b342648859e4e70fb8ab8ef5c">General</label>
-<input type="radio" id="5fdcd230fb834d46b0dab810d7b02424-03d3652482ea4f44a5b9915a23bc9a08" name="5fdcd230fb834d46b0dab810d7b02424" class="tab"><label for="5fdcd230fb834d46b0dab810d7b02424-03d3652482ea4f44a5b9915a23bc9a08">Startup</label>
-<input type="radio" id="5fdcd230fb834d46b0dab810d7b02424-d484e5a199ba409b8edcfccdb3a72ed9" name="5fdcd230fb834d46b0dab810d7b02424" class="tab"><label for="5fdcd230fb834d46b0dab810d7b02424-d484e5a199ba409b8edcfccdb3a72ed9">Android</label>
-<input type="radio" id="5fdcd230fb834d46b0dab810d7b02424-7d91c2d2b78d4b3db03397f7a4fc90b5" name="5fdcd230fb834d46b0dab810d7b02424" class="tab"><label for="5fdcd230fb834d46b0dab810d7b02424-7d91c2d2b78d4b3db03397f7a4fc90b5">iOS</label>
-<input type="radio" id="5fdcd230fb834d46b0dab810d7b02424-ce509ed5574443a594d1a5e28b23338f" name="5fdcd230fb834d46b0dab810d7b02424" class="tab"><label for="5fdcd230fb834d46b0dab810d7b02424-ce509ed5574443a594d1a5e28b23338f">Windows</label>
+<input type="radio" id="9a9974027bd747f8ad0e30e67a086aa7-ec37551a46b84881be6c8d6303d60167" name="9a9974027bd747f8ad0e30e67a086aa7" class="tab" checked=""><label for="9a9974027bd747f8ad0e30e67a086aa7-ec37551a46b84881be6c8d6303d60167">General</label>
+<input type="radio" id="9a9974027bd747f8ad0e30e67a086aa7-a40271f15653435ca9952f2a78a775ab" name="9a9974027bd747f8ad0e30e67a086aa7" class="tab"><label for="9a9974027bd747f8ad0e30e67a086aa7-a40271f15653435ca9952f2a78a775ab">Startup</label>
+<input type="radio" id="9a9974027bd747f8ad0e30e67a086aa7-fe68c0b0b71c49aeac7a9b2a69dbd10f" name="9a9974027bd747f8ad0e30e67a086aa7" class="tab"><label for="9a9974027bd747f8ad0e30e67a086aa7-fe68c0b0b71c49aeac7a9b2a69dbd10f">Android</label>
+<input type="radio" id="9a9974027bd747f8ad0e30e67a086aa7-8d212b8a623d43f5bf2ee68bd515af0d" name="9a9974027bd747f8ad0e30e67a086aa7" class="tab"><label for="9a9974027bd747f8ad0e30e67a086aa7-8d212b8a623d43f5bf2ee68bd515af0d">iOS</label>
+<input type="radio" id="9a9974027bd747f8ad0e30e67a086aa7-ec39ca2bdeb3450d8f001a606af502d6" name="9a9974027bd747f8ad0e30e67a086aa7" class="tab"><label for="9a9974027bd747f8ad0e30e67a086aa7-ec39ca2bdeb3450d8f001a606af502d6">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.BluetoothLE.IBleManager
+|Service|Shiny.BluetoothLE.IBleManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.BluetoothLE/" target="Shiny.BluetoothLE"><img src="https://img.shields.io/nuget/v/Shiny.BluetoothLE.svg?style=for-the-badge&amp;label=Shiny.BluetoothLE"></a>|
-|Static Generated Class|ShinyBle</p>
+|Static Generated Class|ShinyBle|</p>
 
 
 </div>
