--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -369,18 +369,18 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="13822d6c69fb42c191afd0acf9af8496-dc88e2577f2447659cb10d7af00614ea" name="13822d6c69fb42c191afd0acf9af8496" class="tab" checked><label for="13822d6c69fb42c191afd0acf9af8496-dc88e2577f2447659cb10d7af00614ea" >General</label>
-<input type="radio" id="13822d6c69fb42c191afd0acf9af8496-95be5cf16d9c48c5ac46867a1abd5221" name="13822d6c69fb42c191afd0acf9af8496" class="tab" ><label for="13822d6c69fb42c191afd0acf9af8496-95be5cf16d9c48c5ac46867a1abd5221" >Startup</label>
-<input type="radio" id="13822d6c69fb42c191afd0acf9af8496-a33258ce86534a14900810fbc87d8fab" name="13822d6c69fb42c191afd0acf9af8496" class="tab" ><label for="13822d6c69fb42c191afd0acf9af8496-a33258ce86534a14900810fbc87d8fab" >Android</label>
-<input type="radio" id="13822d6c69fb42c191afd0acf9af8496-a2ffeacc1159496eb6b1f59b0691b3b0" name="13822d6c69fb42c191afd0acf9af8496" class="tab" ><label for="13822d6c69fb42c191afd0acf9af8496-a2ffeacc1159496eb6b1f59b0691b3b0" >iOS</label>
+<input type="radio" id="41fc85ef7e884e8c84361a0a720133e7-1196511a66f44857a3f3549e2235cb0a" name="41fc85ef7e884e8c84361a0a720133e7" class="tab" checked><label for="41fc85ef7e884e8c84361a0a720133e7-1196511a66f44857a3f3549e2235cb0a" >General</label>
+<input type="radio" id="41fc85ef7e884e8c84361a0a720133e7-75d1e917958c45acbae72517c6c0eaee" name="41fc85ef7e884e8c84361a0a720133e7" class="tab" ><label for="41fc85ef7e884e8c84361a0a720133e7-75d1e917958c45acbae72517c6c0eaee" >Startup</label>
+<input type="radio" id="41fc85ef7e884e8c84361a0a720133e7-558e8c85ed814506af01702fc481e464" name="41fc85ef7e884e8c84361a0a720133e7" class="tab" ><label for="41fc85ef7e884e8c84361a0a720133e7-558e8c85ed814506af01702fc481e464" >Android</label>
+<input type="radio" id="41fc85ef7e884e8c84361a0a720133e7-21782b88a12f4fb0a4d8ee70eb0e800c" name="41fc85ef7e884e8c84361a0a720133e7" class="tab" ><label for="41fc85ef7e884e8c84361a0a720133e7-21782b88a12f4fb0a4d8ee70eb0e800c" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.BluetoothLE.IBleHostingManager
+|Service|Shiny.BluetoothLE.IBleHostingManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.BluetoothLE.Hosting/" target="Shiny.BluetoothLE.Hosting"><img src="https://img.shields.io/nuget/v/Shiny.BluetoothLE.Hosting.svg?style=for-the-badge&label=Shiny.BluetoothLE.Hosting" /></a>|
-|Static Generated Class|ShinyBleHosting</p>
+|Static Generated Class|ShinyBleHosting|</p>
 
 
 </div>
