--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -369,18 +369,18 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="a296bc61e128463b9532dca2159c5709-fd61ce5e168f4a4190d06076d3fa9c8c" name="a296bc61e128463b9532dca2159c5709" class="tab" checked><label for="a296bc61e128463b9532dca2159c5709-fd61ce5e168f4a4190d06076d3fa9c8c" >General</label>
-<input type="radio" id="a296bc61e128463b9532dca2159c5709-95cf1130ed024d7c95d02d7db6149f69" name="a296bc61e128463b9532dca2159c5709" class="tab" ><label for="a296bc61e128463b9532dca2159c5709-95cf1130ed024d7c95d02d7db6149f69" >Startup</label>
-<input type="radio" id="a296bc61e128463b9532dca2159c5709-8c816d8ac5f14cd3973f1c88a959d882" name="a296bc61e128463b9532dca2159c5709" class="tab" ><label for="a296bc61e128463b9532dca2159c5709-8c816d8ac5f14cd3973f1c88a959d882" >Android</label>
-<input type="radio" id="a296bc61e128463b9532dca2159c5709-63eb0399e32d4c0aa6f8be5f7cfc8dff" name="a296bc61e128463b9532dca2159c5709" class="tab" ><label for="a296bc61e128463b9532dca2159c5709-63eb0399e32d4c0aa6f8be5f7cfc8dff" >iOS</label>
-<input type="radio" id="a296bc61e128463b9532dca2159c5709-6e1418d44a45446db2ab2cecf8266a98" name="a296bc61e128463b9532dca2159c5709" class="tab" ><label for="a296bc61e128463b9532dca2159c5709-6e1418d44a45446db2ab2cecf8266a98" >Windows</label>
+<input type="radio" id="8a0f7ea9529d4053a1d27ae4d5ea159a-093c229085cc4794b082097f57313008" name="8a0f7ea9529d4053a1d27ae4d5ea159a" class="tab" checked><label for="8a0f7ea9529d4053a1d27ae4d5ea159a-093c229085cc4794b082097f57313008" >General</label>
+<input type="radio" id="8a0f7ea9529d4053a1d27ae4d5ea159a-950a64310622429ba5837a215b671e67" name="8a0f7ea9529d4053a1d27ae4d5ea159a" class="tab" ><label for="8a0f7ea9529d4053a1d27ae4d5ea159a-950a64310622429ba5837a215b671e67" >Startup</label>
+<input type="radio" id="8a0f7ea9529d4053a1d27ae4d5ea159a-ea181d4f13b34b8d91a43930e18eca5a" name="8a0f7ea9529d4053a1d27ae4d5ea159a" class="tab" ><label for="8a0f7ea9529d4053a1d27ae4d5ea159a-ea181d4f13b34b8d91a43930e18eca5a" >Android</label>
+<input type="radio" id="8a0f7ea9529d4053a1d27ae4d5ea159a-cd5521631ed04099822bf9f7c5394fd8" name="8a0f7ea9529d4053a1d27ae4d5ea159a" class="tab" ><label for="8a0f7ea9529d4053a1d27ae4d5ea159a-cd5521631ed04099822bf9f7c5394fd8" >iOS</label>
+<input type="radio" id="8a0f7ea9529d4053a1d27ae4d5ea159a-07404cbe861e47008bf8cea8051bf776" name="8a0f7ea9529d4053a1d27ae4d5ea159a" class="tab" ><label for="8a0f7ea9529d4053a1d27ae4d5ea159a-07404cbe861e47008bf8cea8051bf776" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Locations.IGeofenceManager
+|Service|Shiny.Locations.IGeofenceManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Locations/" target="Shiny.Locations"><img src="https://img.shields.io/nuget/v/Shiny.Locations.svg?style=for-the-badge&label=Shiny.Locations" /></a>|
-|Static Generated Class|ShinyGeofencing</p>
+|Static Generated Class|ShinyGeofencing|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
