--- a/locations/gps.html
+++ b/locations/gps.html
@@ -370,18 +370,18 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="aec2967860954c0a975295479589fd58-4b9aa476c55a4530b35e1127db015348" name="aec2967860954c0a975295479589fd58" class="tab" checked><label for="aec2967860954c0a975295479589fd58-4b9aa476c55a4530b35e1127db015348" >General</label>
-<input type="radio" id="aec2967860954c0a975295479589fd58-8e0c4e747cbc43758688bb9592c0f9af" name="aec2967860954c0a975295479589fd58" class="tab" ><label for="aec2967860954c0a975295479589fd58-8e0c4e747cbc43758688bb9592c0f9af" >Startup</label>
-<input type="radio" id="aec2967860954c0a975295479589fd58-85e18f81686d4bc795ed3e6798f7e60a" name="aec2967860954c0a975295479589fd58" class="tab" ><label for="aec2967860954c0a975295479589fd58-85e18f81686d4bc795ed3e6798f7e60a" >Android</label>
-<input type="radio" id="aec2967860954c0a975295479589fd58-68352b6bb3c741f898bfb29cfc3894f7" name="aec2967860954c0a975295479589fd58" class="tab" ><label for="aec2967860954c0a975295479589fd58-68352b6bb3c741f898bfb29cfc3894f7" >iOS</label>
-<input type="radio" id="aec2967860954c0a975295479589fd58-c46c7206e47441bebbd4d155713efe16" name="aec2967860954c0a975295479589fd58" class="tab" ><label for="aec2967860954c0a975295479589fd58-c46c7206e47441bebbd4d155713efe16" >Windows</label>
+<input type="radio" id="ddc2c8f48bc44c7f94aabd082741f686-a9fec0b45ca04b3f9a7c344ee00fbef3" name="ddc2c8f48bc44c7f94aabd082741f686" class="tab" checked><label for="ddc2c8f48bc44c7f94aabd082741f686-a9fec0b45ca04b3f9a7c344ee00fbef3" >General</label>
+<input type="radio" id="ddc2c8f48bc44c7f94aabd082741f686-3b2d6ca70b8b4ce5ab76a41220eeda5e" name="ddc2c8f48bc44c7f94aabd082741f686" class="tab" ><label for="ddc2c8f48bc44c7f94aabd082741f686-3b2d6ca70b8b4ce5ab76a41220eeda5e" >Startup</label>
+<input type="radio" id="ddc2c8f48bc44c7f94aabd082741f686-449674aa1de74fbb97cb830247c0e2e5" name="ddc2c8f48bc44c7f94aabd082741f686" class="tab" ><label for="ddc2c8f48bc44c7f94aabd082741f686-449674aa1de74fbb97cb830247c0e2e5" >Android</label>
+<input type="radio" id="ddc2c8f48bc44c7f94aabd082741f686-24e81b69a1ad4e17b92740e2fb1cf9e2" name="ddc2c8f48bc44c7f94aabd082741f686" class="tab" ><label for="ddc2c8f48bc44c7f94aabd082741f686-24e81b69a1ad4e17b92740e2fb1cf9e2" >iOS</label>
+<input type="radio" id="ddc2c8f48bc44c7f94aabd082741f686-65e45b7c27a94fcb88cd9391d198cb58" name="ddc2c8f48bc44c7f94aabd082741f686" class="tab" ><label for="ddc2c8f48bc44c7f94aabd082741f686-65e45b7c27a94fcb88cd9391d198cb58" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Locations.IGpsManager
+|Service|Shiny.Locations.IGpsManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Locations/" target="Shiny.Locations"><img src="https://img.shields.io/nuget/v/Shiny.Locations.svg?style=for-the-badge&label=Shiny.Locations" /></a>|
-|Static Generated Class|ShinyGps</p>
+|Static Generated Class|ShinyGps|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
