--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -378,17 +378,17 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="1f652344444d414395c167a190b1921d-4ca45bd6479c40b19bc64d0b36ddfc88" name="1f652344444d414395c167a190b1921d" class="tab" checked><label for="1f652344444d414395c167a190b1921d-4ca45bd6479c40b19bc64d0b36ddfc88" >General</label>
-<input type="radio" id="1f652344444d414395c167a190b1921d-22e52fd40b82430d99ff9d6de937e836" name="1f652344444d414395c167a190b1921d" class="tab" ><label for="1f652344444d414395c167a190b1921d-22e52fd40b82430d99ff9d6de937e836" >Startup</label>
-<input type="radio" id="1f652344444d414395c167a190b1921d-92b2b5ecff8f470484a6ca2e99c8c365" name="1f652344444d414395c167a190b1921d" class="tab" ><label for="1f652344444d414395c167a190b1921d-92b2b5ecff8f470484a6ca2e99c8c365" >Android</label>
-<input type="radio" id="1f652344444d414395c167a190b1921d-8817d665d7ae4601b20d8af078dee61e" name="1f652344444d414395c167a190b1921d" class="tab" ><label for="1f652344444d414395c167a190b1921d-8817d665d7ae4601b20d8af078dee61e" >iOS</label>
+<input type="radio" id="9bf2489018f84a0e887ab3d8ccd1f21c-e30ffd5af3b54567b29786ee55d35f17" name="9bf2489018f84a0e887ab3d8ccd1f21c" class="tab" checked><label for="9bf2489018f84a0e887ab3d8ccd1f21c-e30ffd5af3b54567b29786ee55d35f17" >General</label>
+<input type="radio" id="9bf2489018f84a0e887ab3d8ccd1f21c-a816e0e0f180456aac586e020d31ce56" name="9bf2489018f84a0e887ab3d8ccd1f21c" class="tab" ><label for="9bf2489018f84a0e887ab3d8ccd1f21c-a816e0e0f180456aac586e020d31ce56" >Startup</label>
+<input type="radio" id="9bf2489018f84a0e887ab3d8ccd1f21c-35b63183d4d24d95b4d92a1880fc6826" name="9bf2489018f84a0e887ab3d8ccd1f21c" class="tab" ><label for="9bf2489018f84a0e887ab3d8ccd1f21c-35b63183d4d24d95b4d92a1880fc6826" >Android</label>
+<input type="radio" id="9bf2489018f84a0e887ab3d8ccd1f21c-15e8615ecce548948bf98aca236405cc" name="9bf2489018f84a0e887ab3d8ccd1f21c" class="tab" ><label for="9bf2489018f84a0e887ab3d8ccd1f21c-15e8615ecce548948bf98aca236405cc" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Locations.IMotionActivityManager
+|Service|Shiny.Locations.IMotionActivityManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Locations/" target="Shiny.Locations"><img src="https://img.shields.io/nuget/v/Shiny.Locations.svg?style=for-the-badge&label=Shiny.Locations" /></a>|
-|Static Generated Class|ShinyMotionActivity</p>
+|Static Generated Class|ShinyMotionActivity|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
