--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -370,18 +370,18 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="ea74e2cb7e3f4481b56eec4f30f39e8e-f2e44bed772d4db8b69ca52959ff513a" name="ea74e2cb7e3f4481b56eec4f30f39e8e" class="tab" checked=""><label for="ea74e2cb7e3f4481b56eec4f30f39e8e-f2e44bed772d4db8b69ca52959ff513a">General</label>
-<input type="radio" id="ea74e2cb7e3f4481b56eec4f30f39e8e-a38ee5e3e0904d29955df1963b093546" name="ea74e2cb7e3f4481b56eec4f30f39e8e" class="tab"><label for="ea74e2cb7e3f4481b56eec4f30f39e8e-a38ee5e3e0904d29955df1963b093546">Startup</label>
-<input type="radio" id="ea74e2cb7e3f4481b56eec4f30f39e8e-fbc47644b2b34d19a889d51b6a590281" name="ea74e2cb7e3f4481b56eec4f30f39e8e" class="tab"><label for="ea74e2cb7e3f4481b56eec4f30f39e8e-fbc47644b2b34d19a889d51b6a590281">Android</label>
-<input type="radio" id="ea74e2cb7e3f4481b56eec4f30f39e8e-accd1641614942aabb533488b87d1e3a" name="ea74e2cb7e3f4481b56eec4f30f39e8e" class="tab"><label for="ea74e2cb7e3f4481b56eec4f30f39e8e-accd1641614942aabb533488b87d1e3a">iOS</label>
-<input type="radio" id="ea74e2cb7e3f4481b56eec4f30f39e8e-cac69c8396a2416aa2c20a559fcc27fe" name="ea74e2cb7e3f4481b56eec4f30f39e8e" class="tab"><label for="ea74e2cb7e3f4481b56eec4f30f39e8e-cac69c8396a2416aa2c20a559fcc27fe">Windows</label>
+<input type="radio" id="800b42bb54c846f0917270825bb8046e-a56169976ee34ccaa315e0fe2c15b528" name="800b42bb54c846f0917270825bb8046e" class="tab" checked=""><label for="800b42bb54c846f0917270825bb8046e-a56169976ee34ccaa315e0fe2c15b528">General</label>
+<input type="radio" id="800b42bb54c846f0917270825bb8046e-8d454ad5be5641708fe2d2817258733a" name="800b42bb54c846f0917270825bb8046e" class="tab"><label for="800b42bb54c846f0917270825bb8046e-8d454ad5be5641708fe2d2817258733a">Startup</label>
+<input type="radio" id="800b42bb54c846f0917270825bb8046e-6a3d6bc3c9204e13a9c0df743168069a" name="800b42bb54c846f0917270825bb8046e" class="tab"><label for="800b42bb54c846f0917270825bb8046e-6a3d6bc3c9204e13a9c0df743168069a">Android</label>
+<input type="radio" id="800b42bb54c846f0917270825bb8046e-2fe27c0cac804132ba5d838540f7b1f5" name="800b42bb54c846f0917270825bb8046e" class="tab"><label for="800b42bb54c846f0917270825bb8046e-2fe27c0cac804132ba5d838540f7b1f5">iOS</label>
+<input type="radio" id="800b42bb54c846f0917270825bb8046e-6635416df5fb4d329a7eb670e36ae95d" name="800b42bb54c846f0917270825bb8046e" class="tab"><label for="800b42bb54c846f0917270825bb8046e-6635416df5fb4d329a7eb670e36ae95d">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description|Local Notifications|
-|Service|Shiny.Notifications.INotificationManager
+|Service|Shiny.Notifications.INotificationManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Notifications/" target="Shiny.Notifications"><img src="https://img.shields.io/nuget/v/Shiny.Notifications.svg?style=for-the-badge&amp;label=Shiny.Notifications"></a>|
-|Static Generated Class|ShinyNotifications</p>
+|Static Generated Class|ShinyNotifications|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
