--- a/push/azure.html
+++ b/push/azure.html
@@ -369,18 +369,18 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="7c9e4bfcacb6411da51ff88582bf19a4-4d0ab9967a8f4962b70f6639631b402e" name="7c9e4bfcacb6411da51ff88582bf19a4" class="tab" checked><label for="7c9e4bfcacb6411da51ff88582bf19a4-4d0ab9967a8f4962b70f6639631b402e" >General</label>
-<input type="radio" id="7c9e4bfcacb6411da51ff88582bf19a4-a42eca0b49f94a79ad5e571f05a9bcea" name="7c9e4bfcacb6411da51ff88582bf19a4" class="tab" ><label for="7c9e4bfcacb6411da51ff88582bf19a4-a42eca0b49f94a79ad5e571f05a9bcea" >Startup</label>
-<input type="radio" id="7c9e4bfcacb6411da51ff88582bf19a4-b36391eac53040e2b141a576bb352327" name="7c9e4bfcacb6411da51ff88582bf19a4" class="tab" ><label for="7c9e4bfcacb6411da51ff88582bf19a4-b36391eac53040e2b141a576bb352327" >Android</label>
-<input type="radio" id="7c9e4bfcacb6411da51ff88582bf19a4-7b13d53d2b4a4e5f9e7a30d5163733a5" name="7c9e4bfcacb6411da51ff88582bf19a4" class="tab" ><label for="7c9e4bfcacb6411da51ff88582bf19a4-7b13d53d2b4a4e5f9e7a30d5163733a5" >iOS</label>
-<input type="radio" id="7c9e4bfcacb6411da51ff88582bf19a4-66dc7508d0144343b9e8d83aea4386cc" name="7c9e4bfcacb6411da51ff88582bf19a4" class="tab" ><label for="7c9e4bfcacb6411da51ff88582bf19a4-66dc7508d0144343b9e8d83aea4386cc" >Windows</label>
+<input type="radio" id="3d9f690d7cfe4c368210858705867a33-ea2af6ccb67b436eac0f12daa4f3cd7f" name="3d9f690d7cfe4c368210858705867a33" class="tab" checked><label for="3d9f690d7cfe4c368210858705867a33-ea2af6ccb67b436eac0f12daa4f3cd7f" >General</label>
+<input type="radio" id="3d9f690d7cfe4c368210858705867a33-c8c03791a3e04e958db0e4f7c394700c" name="3d9f690d7cfe4c368210858705867a33" class="tab" ><label for="3d9f690d7cfe4c368210858705867a33-c8c03791a3e04e958db0e4f7c394700c" >Startup</label>
+<input type="radio" id="3d9f690d7cfe4c368210858705867a33-514745b2cd2c40e093d906a91c65c198" name="3d9f690d7cfe4c368210858705867a33" class="tab" ><label for="3d9f690d7cfe4c368210858705867a33-514745b2cd2c40e093d906a91c65c198" >Android</label>
+<input type="radio" id="3d9f690d7cfe4c368210858705867a33-8b3e89944da74dd1b1267777ae9ddb53" name="3d9f690d7cfe4c368210858705867a33" class="tab" ><label for="3d9f690d7cfe4c368210858705867a33-8b3e89944da74dd1b1267777ae9ddb53" >iOS</label>
+<input type="radio" id="3d9f690d7cfe4c368210858705867a33-309f0d21d0f7470fbe78b9ac2c6cfdf9" name="3d9f690d7cfe4c368210858705867a33" class="tab" ><label for="3d9f690d7cfe4c368210858705867a33-309f0d21d0f7470fbe78b9ac2c6cfdf9" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Push.IPushManager
+|Service|Shiny.Push.IPushManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Push.AzureNotificationHubs/" target="Shiny.Push.AzureNotificationHubs"><img src="https://img.shields.io/nuget/v/Shiny.Push.AzureNotificationHubs.svg?style=for-the-badge&label=Shiny.Push.AzureNotificationHubs" /></a>|
-|Static Generated Class|</p>
+|Static Generated Class||</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
