--- a/push/firebase.html
+++ b/push/firebase.html
@@ -367,17 +367,17 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="bff88ee31ab842679603867461961e3c-6af12dd54de94cd2b23fbf288067fdcd" name="bff88ee31ab842679603867461961e3c" class="tab" checked=""><label for="bff88ee31ab842679603867461961e3c-6af12dd54de94cd2b23fbf288067fdcd">General</label>
-<input type="radio" id="bff88ee31ab842679603867461961e3c-982ce352d25d442ca93a0a079ff3818d" name="bff88ee31ab842679603867461961e3c" class="tab"><label for="bff88ee31ab842679603867461961e3c-982ce352d25d442ca93a0a079ff3818d">Startup</label>
-<input type="radio" id="bff88ee31ab842679603867461961e3c-a0fb4ea7bfc74a81982cef3ea9758901" name="bff88ee31ab842679603867461961e3c" class="tab"><label for="bff88ee31ab842679603867461961e3c-a0fb4ea7bfc74a81982cef3ea9758901">Android</label>
-<input type="radio" id="bff88ee31ab842679603867461961e3c-749f61af2bde432ba8d81374193061ee" name="bff88ee31ab842679603867461961e3c" class="tab"><label for="bff88ee31ab842679603867461961e3c-749f61af2bde432ba8d81374193061ee">iOS</label>
+<input type="radio" id="8843d815ca804d8eaf4802e3848eb531-9fba00b56da349bea8c9afc4881d2932" name="8843d815ca804d8eaf4802e3848eb531" class="tab" checked=""><label for="8843d815ca804d8eaf4802e3848eb531-9fba00b56da349bea8c9afc4881d2932">General</label>
+<input type="radio" id="8843d815ca804d8eaf4802e3848eb531-2102cdbc0cf74ce8a6a7fa82cf6f533e" name="8843d815ca804d8eaf4802e3848eb531" class="tab"><label for="8843d815ca804d8eaf4802e3848eb531-2102cdbc0cf74ce8a6a7fa82cf6f533e">Startup</label>
+<input type="radio" id="8843d815ca804d8eaf4802e3848eb531-82188accf6e94f5188ef4aa0f6bac4a1" name="8843d815ca804d8eaf4802e3848eb531" class="tab"><label for="8843d815ca804d8eaf4802e3848eb531-82188accf6e94f5188ef4aa0f6bac4a1">Android</label>
+<input type="radio" id="8843d815ca804d8eaf4802e3848eb531-a4e3f562114e49d2b3951edf6f904e5d" name="8843d815ca804d8eaf4802e3848eb531" class="tab"><label for="8843d815ca804d8eaf4802e3848eb531-a4e3f562114e49d2b3951edf6f904e5d">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Push.IPushManager
+|Service|Shiny.Push.IPushManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Push.FirebaseMessaging/" target="Shiny.Push.FirebaseMessaging"><img src="https://img.shields.io/nuget/v/Shiny.Push.FirebaseMessaging.svg?style=for-the-badge&amp;label=Shiny.Push.FirebaseMessaging"></a>|
-|Static Generated Class|</p>
+|Static Generated Class||</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
