--- a/push/onesignal.html
+++ b/push/onesignal.html
@@ -369,17 +369,17 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="6872c3e3b3b94c3ea2cba4fa4ffd118a-cbe22f3e15f74eb4a911c819e9d47c0f" name="6872c3e3b3b94c3ea2cba4fa4ffd118a" class="tab" checked><label for="6872c3e3b3b94c3ea2cba4fa4ffd118a-cbe22f3e15f74eb4a911c819e9d47c0f" >General</label>
-<input type="radio" id="6872c3e3b3b94c3ea2cba4fa4ffd118a-e00bdac03d2c4de4955ce0650b111f8c" name="6872c3e3b3b94c3ea2cba4fa4ffd118a" class="tab" ><label for="6872c3e3b3b94c3ea2cba4fa4ffd118a-e00bdac03d2c4de4955ce0650b111f8c" >Startup</label>
-<input type="radio" id="6872c3e3b3b94c3ea2cba4fa4ffd118a-d8124c55263049a099959dc87bcf70e8" name="6872c3e3b3b94c3ea2cba4fa4ffd118a" class="tab" ><label for="6872c3e3b3b94c3ea2cba4fa4ffd118a-d8124c55263049a099959dc87bcf70e8" >Android</label>
-<input type="radio" id="6872c3e3b3b94c3ea2cba4fa4ffd118a-a0b4eed57d2e4fe08411de71718ccbea" name="6872c3e3b3b94c3ea2cba4fa4ffd118a" class="tab" ><label for="6872c3e3b3b94c3ea2cba4fa4ffd118a-a0b4eed57d2e4fe08411de71718ccbea" >iOS</label>
+<input type="radio" id="e3d38cb2b67c4f128ff219fa54996370-3fa75ad7cbf643d685de43269208e0c7" name="e3d38cb2b67c4f128ff219fa54996370" class="tab" checked><label for="e3d38cb2b67c4f128ff219fa54996370-3fa75ad7cbf643d685de43269208e0c7" >General</label>
+<input type="radio" id="e3d38cb2b67c4f128ff219fa54996370-a63e5c5064a44a07b14bcdb41e28ce3b" name="e3d38cb2b67c4f128ff219fa54996370" class="tab" ><label for="e3d38cb2b67c4f128ff219fa54996370-a63e5c5064a44a07b14bcdb41e28ce3b" >Startup</label>
+<input type="radio" id="e3d38cb2b67c4f128ff219fa54996370-7c3c9e04af044c829ce52b46e5c5e4cf" name="e3d38cb2b67c4f128ff219fa54996370" class="tab" ><label for="e3d38cb2b67c4f128ff219fa54996370-7c3c9e04af044c829ce52b46e5c5e4cf" >Android</label>
+<input type="radio" id="e3d38cb2b67c4f128ff219fa54996370-86cfef71898e4bfe8ef58d751eaf072f" name="e3d38cb2b67c4f128ff219fa54996370" class="tab" ><label for="e3d38cb2b67c4f128ff219fa54996370-86cfef71898e4bfe8ef58d751eaf072f" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Push.IPushManager
+|Service|Shiny.Push.IPushManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Push.OneSignal/" target="Shiny.Push.OneSignal"><img src="https://img.shields.io/nuget/v/Shiny.Push.OneSignal.svg?style=for-the-badge&label=Shiny.Push.OneSignal" /></a>|
-|Static Generated Class|</p>
+|Static Generated Class||</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
