--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -369,18 +369,18 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d36c1c27ea724383990698f9bbb089c5-dc8cacc5012e441e932aebe6db810e93" name="d36c1c27ea724383990698f9bbb089c5" class="tab" checked><label for="d36c1c27ea724383990698f9bbb089c5-dc8cacc5012e441e932aebe6db810e93" >General</label>
-<input type="radio" id="d36c1c27ea724383990698f9bbb089c5-a47960474a76427baa52ab46ec13dd65" name="d36c1c27ea724383990698f9bbb089c5" class="tab" ><label for="d36c1c27ea724383990698f9bbb089c5-a47960474a76427baa52ab46ec13dd65" >Startup</label>
-<input type="radio" id="d36c1c27ea724383990698f9bbb089c5-93a1ad8231d142d88ebdf4c62bdb1a85" name="d36c1c27ea724383990698f9bbb089c5" class="tab" ><label for="d36c1c27ea724383990698f9bbb089c5-93a1ad8231d142d88ebdf4c62bdb1a85" >Android</label>
-<input type="radio" id="d36c1c27ea724383990698f9bbb089c5-f2039e391bf144219d1fe5da9493dc88" name="d36c1c27ea724383990698f9bbb089c5" class="tab" ><label for="d36c1c27ea724383990698f9bbb089c5-f2039e391bf144219d1fe5da9493dc88" >iOS</label>
-<input type="radio" id="d36c1c27ea724383990698f9bbb089c5-73a6b5df1fd14b708809028554ca4270" name="d36c1c27ea724383990698f9bbb089c5" class="tab" ><label for="d36c1c27ea724383990698f9bbb089c5-73a6b5df1fd14b708809028554ca4270" >Windows</label>
+<input type="radio" id="078bf223a93a4bec9a768c5be4319abc-1eccfa356e5d4fd9a757dc6026a02968" name="078bf223a93a4bec9a768c5be4319abc" class="tab" checked><label for="078bf223a93a4bec9a768c5be4319abc-1eccfa356e5d4fd9a757dc6026a02968" >General</label>
+<input type="radio" id="078bf223a93a4bec9a768c5be4319abc-4a3e69f592dd497eb4509b45970afc34" name="078bf223a93a4bec9a768c5be4319abc" class="tab" ><label for="078bf223a93a4bec9a768c5be4319abc-4a3e69f592dd497eb4509b45970afc34" >Startup</label>
+<input type="radio" id="078bf223a93a4bec9a768c5be4319abc-8af221d3870f4d91a334dfc9d22d68ab" name="078bf223a93a4bec9a768c5be4319abc" class="tab" ><label for="078bf223a93a4bec9a768c5be4319abc-8af221d3870f4d91a334dfc9d22d68ab" >Android</label>
+<input type="radio" id="078bf223a93a4bec9a768c5be4319abc-9e463a1b8b9b4e3b8848db8af48ff1fa" name="078bf223a93a4bec9a768c5be4319abc" class="tab" ><label for="078bf223a93a4bec9a768c5be4319abc-9e463a1b8b9b4e3b8848db8af48ff1fa" >iOS</label>
+<input type="radio" id="078bf223a93a4bec9a768c5be4319abc-bf4ca3fdc4a54f6b83433d9d30c36ba3" name="078bf223a93a4bec9a768c5be4319abc" class="tab" ><label for="078bf223a93a4bec9a768c5be4319abc-bf4ca3fdc4a54f6b83433d9d30c36ba3" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description|Accelerometer|
-|Service|Shiny.Sensors.IAccelerometer
+|Service|Shiny.Sensors.IAccelerometer|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
-|Static Generated Class|ShinyAccelerometer</p>
+|Static Generated Class|ShinyAccelerometer|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
