--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -369,17 +369,17 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="1091345074c544359dee1c6ddd14d0d5-4450a8db3c0d4ac58ab1e0248ca632ca" name="1091345074c544359dee1c6ddd14d0d5" class="tab" checked><label for="1091345074c544359dee1c6ddd14d0d5-4450a8db3c0d4ac58ab1e0248ca632ca" >General</label>
-<input type="radio" id="1091345074c544359dee1c6ddd14d0d5-58d3c68a64844d82a7d1e49725ca01d7" name="1091345074c544359dee1c6ddd14d0d5" class="tab" ><label for="1091345074c544359dee1c6ddd14d0d5-58d3c68a64844d82a7d1e49725ca01d7" >Startup</label>
-<input type="radio" id="1091345074c544359dee1c6ddd14d0d5-809de668582d42e1b3dd6d2d23b50f80" name="1091345074c544359dee1c6ddd14d0d5" class="tab" ><label for="1091345074c544359dee1c6ddd14d0d5-809de668582d42e1b3dd6d2d23b50f80" >Android</label>
-<input type="radio" id="1091345074c544359dee1c6ddd14d0d5-bfe363f95b874494bc03a18f9264de35" name="1091345074c544359dee1c6ddd14d0d5" class="tab" ><label for="1091345074c544359dee1c6ddd14d0d5-bfe363f95b874494bc03a18f9264de35" >Windows</label>
+<input type="radio" id="851daed856d1492b900ea13750608ffb-b8abb98c1004402fb82bca2155cf1b05" name="851daed856d1492b900ea13750608ffb" class="tab" checked><label for="851daed856d1492b900ea13750608ffb-b8abb98c1004402fb82bca2155cf1b05" >General</label>
+<input type="radio" id="851daed856d1492b900ea13750608ffb-1f2c9389980344a8a9094d09018c20f0" name="851daed856d1492b900ea13750608ffb" class="tab" ><label for="851daed856d1492b900ea13750608ffb-1f2c9389980344a8a9094d09018c20f0" >Startup</label>
+<input type="radio" id="851daed856d1492b900ea13750608ffb-793742b42d644e3a886fb9e330d8647d" name="851daed856d1492b900ea13750608ffb" class="tab" ><label for="851daed856d1492b900ea13750608ffb-793742b42d644e3a886fb9e330d8647d" >Android</label>
+<input type="radio" id="851daed856d1492b900ea13750608ffb-a887f06dcd0445f297153b33f2832f1b" name="851daed856d1492b900ea13750608ffb" class="tab" ><label for="851daed856d1492b900ea13750608ffb-a887f06dcd0445f297153b33f2832f1b" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Sensors.IAmbientLight
+|Service|Shiny.Sensors.IAmbientLight|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
-|Static Generated Class|ShinyAmbientLight</p>
+|Static Generated Class|ShinyAmbientLight|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
