--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -369,18 +369,18 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="14606a5dbc554aee8c24290846304a34-68a2f531577345febf38cb6428b799ef" name="14606a5dbc554aee8c24290846304a34" class="tab" checked><label for="14606a5dbc554aee8c24290846304a34-68a2f531577345febf38cb6428b799ef" >General</label>
-<input type="radio" id="14606a5dbc554aee8c24290846304a34-fdf8757918b9447bb95189282b52f4fa" name="14606a5dbc554aee8c24290846304a34" class="tab" ><label for="14606a5dbc554aee8c24290846304a34-fdf8757918b9447bb95189282b52f4fa" >Startup</label>
-<input type="radio" id="14606a5dbc554aee8c24290846304a34-2302d321869648d8a6147af18cf9e9e3" name="14606a5dbc554aee8c24290846304a34" class="tab" ><label for="14606a5dbc554aee8c24290846304a34-2302d321869648d8a6147af18cf9e9e3" >Android</label>
-<input type="radio" id="14606a5dbc554aee8c24290846304a34-6da33341a6694eb5a452825302d78d5e" name="14606a5dbc554aee8c24290846304a34" class="tab" ><label for="14606a5dbc554aee8c24290846304a34-6da33341a6694eb5a452825302d78d5e" >iOS</label>
-<input type="radio" id="14606a5dbc554aee8c24290846304a34-c3dee40550674967be08eb813bf3680c" name="14606a5dbc554aee8c24290846304a34" class="tab" ><label for="14606a5dbc554aee8c24290846304a34-c3dee40550674967be08eb813bf3680c" >Windows</label>
+<input type="radio" id="18eb56e92bf54f42b970d478e9826bc6-a9a8f21099c1443088fd4d7efa8fb24d" name="18eb56e92bf54f42b970d478e9826bc6" class="tab" checked><label for="18eb56e92bf54f42b970d478e9826bc6-a9a8f21099c1443088fd4d7efa8fb24d" >General</label>
+<input type="radio" id="18eb56e92bf54f42b970d478e9826bc6-6a53b1202ff0413ca8a02f64fd150090" name="18eb56e92bf54f42b970d478e9826bc6" class="tab" ><label for="18eb56e92bf54f42b970d478e9826bc6-6a53b1202ff0413ca8a02f64fd150090" >Startup</label>
+<input type="radio" id="18eb56e92bf54f42b970d478e9826bc6-fd9d1074a867418890614aeacaf80b27" name="18eb56e92bf54f42b970d478e9826bc6" class="tab" ><label for="18eb56e92bf54f42b970d478e9826bc6-fd9d1074a867418890614aeacaf80b27" >Android</label>
+<input type="radio" id="18eb56e92bf54f42b970d478e9826bc6-db42145a08c440d0b01cc386ad7d757c" name="18eb56e92bf54f42b970d478e9826bc6" class="tab" ><label for="18eb56e92bf54f42b970d478e9826bc6-db42145a08c440d0b01cc386ad7d757c" >iOS</label>
+<input type="radio" id="18eb56e92bf54f42b970d478e9826bc6-2061e562018442ed835dcecff07ccd5b" name="18eb56e92bf54f42b970d478e9826bc6" class="tab" ><label for="18eb56e92bf54f42b970d478e9826bc6-2061e562018442ed835dcecff07ccd5b" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Sensors.IBarometer
+|Service|Shiny.Sensors.IBarometer|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
-|Static Generated Class|ShinyBarometer</p>
+|Static Generated Class|ShinyBarometer|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
