--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -369,18 +369,18 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="49b248cfa16540f2a3a2c648400f5665-3ac845d6c39e4d67929769010752946f" name="49b248cfa16540f2a3a2c648400f5665" class="tab" checked><label for="49b248cfa16540f2a3a2c648400f5665-3ac845d6c39e4d67929769010752946f" >General</label>
-<input type="radio" id="49b248cfa16540f2a3a2c648400f5665-a730632c3fb7429e802778ebb77ac2d2" name="49b248cfa16540f2a3a2c648400f5665" class="tab" ><label for="49b248cfa16540f2a3a2c648400f5665-a730632c3fb7429e802778ebb77ac2d2" >Startup</label>
-<input type="radio" id="49b248cfa16540f2a3a2c648400f5665-f193eba6b9a24091bc401ab37531a13c" name="49b248cfa16540f2a3a2c648400f5665" class="tab" ><label for="49b248cfa16540f2a3a2c648400f5665-f193eba6b9a24091bc401ab37531a13c" >Android</label>
-<input type="radio" id="49b248cfa16540f2a3a2c648400f5665-807709afcd1d4c76ae34a29b391f54fa" name="49b248cfa16540f2a3a2c648400f5665" class="tab" ><label for="49b248cfa16540f2a3a2c648400f5665-807709afcd1d4c76ae34a29b391f54fa" >iOS</label>
-<input type="radio" id="49b248cfa16540f2a3a2c648400f5665-03451a09cbcf4bd6b8e5144a237f4895" name="49b248cfa16540f2a3a2c648400f5665" class="tab" ><label for="49b248cfa16540f2a3a2c648400f5665-03451a09cbcf4bd6b8e5144a237f4895" >Windows</label>
+<input type="radio" id="4444923d07b846c29e26d46884e7c96f-f6234eb112b44cf3a9a27d904bf986ba" name="4444923d07b846c29e26d46884e7c96f" class="tab" checked><label for="4444923d07b846c29e26d46884e7c96f-f6234eb112b44cf3a9a27d904bf986ba" >General</label>
+<input type="radio" id="4444923d07b846c29e26d46884e7c96f-869c469bf2464e1da429e2fdd63a5406" name="4444923d07b846c29e26d46884e7c96f" class="tab" ><label for="4444923d07b846c29e26d46884e7c96f-869c469bf2464e1da429e2fdd63a5406" >Startup</label>
+<input type="radio" id="4444923d07b846c29e26d46884e7c96f-99273305ba4f473b902ad14e0d4bcd43" name="4444923d07b846c29e26d46884e7c96f" class="tab" ><label for="4444923d07b846c29e26d46884e7c96f-99273305ba4f473b902ad14e0d4bcd43" >Android</label>
+<input type="radio" id="4444923d07b846c29e26d46884e7c96f-e7bd93fdce18462e9682ae553683bc56" name="4444923d07b846c29e26d46884e7c96f" class="tab" ><label for="4444923d07b846c29e26d46884e7c96f-e7bd93fdce18462e9682ae553683bc56" >iOS</label>
+<input type="radio" id="4444923d07b846c29e26d46884e7c96f-e064fa5ce28e451f8ab08a2a83b4c6ec" name="4444923d07b846c29e26d46884e7c96f" class="tab" ><label for="4444923d07b846c29e26d46884e7c96f-e064fa5ce28e451f8ab08a2a83b4c6ec" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Sensors.ICompass
+|Service|Shiny.Sensors.ICompass|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
-|Static Generated Class|ShinyCompass</p>
+|Static Generated Class|ShinyCompass|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
