--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -369,18 +369,18 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="58def3848840499fa2ae0ae47db1c3da-cd6ebc8b5e14468bab45004caa720a95" name="58def3848840499fa2ae0ae47db1c3da" class="tab" checked><label for="58def3848840499fa2ae0ae47db1c3da-cd6ebc8b5e14468bab45004caa720a95" >General</label>
-<input type="radio" id="58def3848840499fa2ae0ae47db1c3da-9c90633cf8314cd685c2b01d9dc4c93b" name="58def3848840499fa2ae0ae47db1c3da" class="tab" ><label for="58def3848840499fa2ae0ae47db1c3da-9c90633cf8314cd685c2b01d9dc4c93b" >Startup</label>
-<input type="radio" id="58def3848840499fa2ae0ae47db1c3da-339ce1e164a444f9b5dc3a8aad4094ad" name="58def3848840499fa2ae0ae47db1c3da" class="tab" ><label for="58def3848840499fa2ae0ae47db1c3da-339ce1e164a444f9b5dc3a8aad4094ad" >Android</label>
-<input type="radio" id="58def3848840499fa2ae0ae47db1c3da-20bbdf83c9844aa5ad7a2592f74fc54c" name="58def3848840499fa2ae0ae47db1c3da" class="tab" ><label for="58def3848840499fa2ae0ae47db1c3da-20bbdf83c9844aa5ad7a2592f74fc54c" >iOS</label>
-<input type="radio" id="58def3848840499fa2ae0ae47db1c3da-af35269c4f6640ebbcf8b58601b2958c" name="58def3848840499fa2ae0ae47db1c3da" class="tab" ><label for="58def3848840499fa2ae0ae47db1c3da-af35269c4f6640ebbcf8b58601b2958c" >Windows</label>
+<input type="radio" id="955737d96e5c47d38a7aafda9ef584bd-53f511d367384a3baeb30992bb5e26cb" name="955737d96e5c47d38a7aafda9ef584bd" class="tab" checked><label for="955737d96e5c47d38a7aafda9ef584bd-53f511d367384a3baeb30992bb5e26cb" >General</label>
+<input type="radio" id="955737d96e5c47d38a7aafda9ef584bd-fbeec86f759349acb34cd1cc09d78d3c" name="955737d96e5c47d38a7aafda9ef584bd" class="tab" ><label for="955737d96e5c47d38a7aafda9ef584bd-fbeec86f759349acb34cd1cc09d78d3c" >Startup</label>
+<input type="radio" id="955737d96e5c47d38a7aafda9ef584bd-a2694ab1f19444b49af916b7f872fe4c" name="955737d96e5c47d38a7aafda9ef584bd" class="tab" ><label for="955737d96e5c47d38a7aafda9ef584bd-a2694ab1f19444b49af916b7f872fe4c" >Android</label>
+<input type="radio" id="955737d96e5c47d38a7aafda9ef584bd-fb2376adb03b4956b4352e0af42de4f5" name="955737d96e5c47d38a7aafda9ef584bd" class="tab" ><label for="955737d96e5c47d38a7aafda9ef584bd-fb2376adb03b4956b4352e0af42de4f5" >iOS</label>
+<input type="radio" id="955737d96e5c47d38a7aafda9ef584bd-ca956231c89443b39ffb72eb32d1038c" name="955737d96e5c47d38a7aafda9ef584bd" class="tab" ><label for="955737d96e5c47d38a7aafda9ef584bd-ca956231c89443b39ffb72eb32d1038c" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Sensors.IGyroscope
+|Service|Shiny.Sensors.IGyroscope|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
-|Static Generated Class|ShinyGyroscope</p>
+|Static Generated Class|ShinyGyroscope|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
