--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -369,16 +369,16 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="cda4753f070940ccb4a3eed3a18f06d7-8126562d10fd4b6b838f52ef58e1d46e" name="cda4753f070940ccb4a3eed3a18f06d7" class="tab" checked><label for="cda4753f070940ccb4a3eed3a18f06d7-8126562d10fd4b6b838f52ef58e1d46e" >General</label>
-<input type="radio" id="cda4753f070940ccb4a3eed3a18f06d7-15ff9de7c35041118b36fcef6991801c" name="cda4753f070940ccb4a3eed3a18f06d7" class="tab" ><label for="cda4753f070940ccb4a3eed3a18f06d7-15ff9de7c35041118b36fcef6991801c" >Startup</label>
-<input type="radio" id="cda4753f070940ccb4a3eed3a18f06d7-e7fa439ed9f8498b8a555c178aa2560b" name="cda4753f070940ccb4a3eed3a18f06d7" class="tab" ><label for="cda4753f070940ccb4a3eed3a18f06d7-e7fa439ed9f8498b8a555c178aa2560b" >Android</label>
+<input type="radio" id="43d176bc71584bc09a23e52639f3eb21-0569163336bd431ba6bac107441bbed9" name="43d176bc71584bc09a23e52639f3eb21" class="tab" checked><label for="43d176bc71584bc09a23e52639f3eb21-0569163336bd431ba6bac107441bbed9" >General</label>
+<input type="radio" id="43d176bc71584bc09a23e52639f3eb21-15e5bd785e024fe1b932c105fee32964" name="43d176bc71584bc09a23e52639f3eb21" class="tab" ><label for="43d176bc71584bc09a23e52639f3eb21-15e5bd785e024fe1b932c105fee32964" >Startup</label>
+<input type="radio" id="43d176bc71584bc09a23e52639f3eb21-4936e95e36264e1d9a24ddec97bd7b09" name="43d176bc71584bc09a23e52639f3eb21" class="tab" ><label for="43d176bc71584bc09a23e52639f3eb21-4936e95e36264e1d9a24ddec97bd7b09" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Sensors.IHumidity
+|Service|Shiny.Sensors.IHumidity|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
-|Static Generated Class|ShinyHumidity</p>
+|Static Generated Class|ShinyHumidity|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
