--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -369,18 +369,18 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b807669b7b714d4ba50bd087419d7d31-3ccbe0749618478c89e1a9705b7425e1" name="b807669b7b714d4ba50bd087419d7d31" class="tab" checked><label for="b807669b7b714d4ba50bd087419d7d31-3ccbe0749618478c89e1a9705b7425e1" >General</label>
-<input type="radio" id="b807669b7b714d4ba50bd087419d7d31-36f067855954457cb21482a5b14d3624" name="b807669b7b714d4ba50bd087419d7d31" class="tab" ><label for="b807669b7b714d4ba50bd087419d7d31-36f067855954457cb21482a5b14d3624" >Startup</label>
-<input type="radio" id="b807669b7b714d4ba50bd087419d7d31-7657f9300dc2415e94ca630ed244c8d9" name="b807669b7b714d4ba50bd087419d7d31" class="tab" ><label for="b807669b7b714d4ba50bd087419d7d31-7657f9300dc2415e94ca630ed244c8d9" >Android</label>
-<input type="radio" id="b807669b7b714d4ba50bd087419d7d31-921c2976b04a44d1ba7cab06b94f5787" name="b807669b7b714d4ba50bd087419d7d31" class="tab" ><label for="b807669b7b714d4ba50bd087419d7d31-921c2976b04a44d1ba7cab06b94f5787" >iOS</label>
-<input type="radio" id="b807669b7b714d4ba50bd087419d7d31-b87284d1ab6a42a88df9d50b86eb0963" name="b807669b7b714d4ba50bd087419d7d31" class="tab" ><label for="b807669b7b714d4ba50bd087419d7d31-b87284d1ab6a42a88df9d50b86eb0963" >Windows</label>
+<input type="radio" id="e167a084a8584e7e9af1c47da6eb4ad2-4f6a920c75ef42b78cae5e7803ded2c7" name="e167a084a8584e7e9af1c47da6eb4ad2" class="tab" checked><label for="e167a084a8584e7e9af1c47da6eb4ad2-4f6a920c75ef42b78cae5e7803ded2c7" >General</label>
+<input type="radio" id="e167a084a8584e7e9af1c47da6eb4ad2-3db61a8c443946b796eaf61f04874ce0" name="e167a084a8584e7e9af1c47da6eb4ad2" class="tab" ><label for="e167a084a8584e7e9af1c47da6eb4ad2-3db61a8c443946b796eaf61f04874ce0" >Startup</label>
+<input type="radio" id="e167a084a8584e7e9af1c47da6eb4ad2-56d6fcb62b994764a468f5e24a29f5d6" name="e167a084a8584e7e9af1c47da6eb4ad2" class="tab" ><label for="e167a084a8584e7e9af1c47da6eb4ad2-56d6fcb62b994764a468f5e24a29f5d6" >Android</label>
+<input type="radio" id="e167a084a8584e7e9af1c47da6eb4ad2-699995e1843841828e8a8cc749768a6e" name="e167a084a8584e7e9af1c47da6eb4ad2" class="tab" ><label for="e167a084a8584e7e9af1c47da6eb4ad2-699995e1843841828e8a8cc749768a6e" >iOS</label>
+<input type="radio" id="e167a084a8584e7e9af1c47da6eb4ad2-d5c1a041222d4484b3d2fa46cff9ae83" name="e167a084a8584e7e9af1c47da6eb4ad2" class="tab" ><label for="e167a084a8584e7e9af1c47da6eb4ad2-d5c1a041222d4484b3d2fa46cff9ae83" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Sensors.IMagnetometer
+|Service|Shiny.Sensors.IMagnetometer|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
-|Static Generated Class|ShinyMagnetometer</p>
+|Static Generated Class|ShinyMagnetometer|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
