--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -369,18 +369,18 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="dec4b9af9b4f4bd484e0b29420b4895b-edd9a450a8a345dab663913fe54841e5" name="dec4b9af9b4f4bd484e0b29420b4895b" class="tab" checked><label for="dec4b9af9b4f4bd484e0b29420b4895b-edd9a450a8a345dab663913fe54841e5" >General</label>
-<input type="radio" id="dec4b9af9b4f4bd484e0b29420b4895b-d27261982e004795bf9c9753571debcb" name="dec4b9af9b4f4bd484e0b29420b4895b" class="tab" ><label for="dec4b9af9b4f4bd484e0b29420b4895b-d27261982e004795bf9c9753571debcb" >Startup</label>
-<input type="radio" id="dec4b9af9b4f4bd484e0b29420b4895b-00448d14f56043ccb1ab73a788dd5b64" name="dec4b9af9b4f4bd484e0b29420b4895b" class="tab" ><label for="dec4b9af9b4f4bd484e0b29420b4895b-00448d14f56043ccb1ab73a788dd5b64" >Android</label>
-<input type="radio" id="dec4b9af9b4f4bd484e0b29420b4895b-286d58e6e73148aab157910cfd399c52" name="dec4b9af9b4f4bd484e0b29420b4895b" class="tab" ><label for="dec4b9af9b4f4bd484e0b29420b4895b-286d58e6e73148aab157910cfd399c52" >iOS</label>
-<input type="radio" id="dec4b9af9b4f4bd484e0b29420b4895b-2c0ba4a9814e4a01a7268f0feaeac2ac" name="dec4b9af9b4f4bd484e0b29420b4895b" class="tab" ><label for="dec4b9af9b4f4bd484e0b29420b4895b-2c0ba4a9814e4a01a7268f0feaeac2ac" >Windows</label>
+<input type="radio" id="d84e153b63b14ed3b3b0f06399743d6d-d78fbc4210144afabf53c945157c8534" name="d84e153b63b14ed3b3b0f06399743d6d" class="tab" checked><label for="d84e153b63b14ed3b3b0f06399743d6d-d78fbc4210144afabf53c945157c8534" >General</label>
+<input type="radio" id="d84e153b63b14ed3b3b0f06399743d6d-a27706d05d6448c3a5059650170f9ce0" name="d84e153b63b14ed3b3b0f06399743d6d" class="tab" ><label for="d84e153b63b14ed3b3b0f06399743d6d-a27706d05d6448c3a5059650170f9ce0" >Startup</label>
+<input type="radio" id="d84e153b63b14ed3b3b0f06399743d6d-917d6de431d34e418ce7ce73b0247033" name="d84e153b63b14ed3b3b0f06399743d6d" class="tab" ><label for="d84e153b63b14ed3b3b0f06399743d6d-917d6de431d34e418ce7ce73b0247033" >Android</label>
+<input type="radio" id="d84e153b63b14ed3b3b0f06399743d6d-cefac2e15f1c480b88b987d34e47e4f0" name="d84e153b63b14ed3b3b0f06399743d6d" class="tab" ><label for="d84e153b63b14ed3b3b0f06399743d6d-cefac2e15f1c480b88b987d34e47e4f0" >iOS</label>
+<input type="radio" id="d84e153b63b14ed3b3b0f06399743d6d-caeb62e44a6548a8a3d0607d706c97a5" name="d84e153b63b14ed3b3b0f06399743d6d" class="tab" ><label for="d84e153b63b14ed3b3b0f06399743d6d-caeb62e44a6548a8a3d0607d706c97a5" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Sensors.IPedometer
+|Service|Shiny.Sensors.IPedometer|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
-|Static Generated Class|ShinyPedometer</p>
+|Static Generated Class|ShinyPedometer|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
