--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -369,16 +369,16 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="c95cb3e43eca4bb9978aff1c2a32378f-8d3241ddd75045cd8c5858d0aa8faefe" name="c95cb3e43eca4bb9978aff1c2a32378f" class="tab" checked><label for="c95cb3e43eca4bb9978aff1c2a32378f-8d3241ddd75045cd8c5858d0aa8faefe" >General</label>
-<input type="radio" id="c95cb3e43eca4bb9978aff1c2a32378f-291162a0e3844ccfbf6720e744f0c2f7" name="c95cb3e43eca4bb9978aff1c2a32378f" class="tab" ><label for="c95cb3e43eca4bb9978aff1c2a32378f-291162a0e3844ccfbf6720e744f0c2f7" >Startup</label>
-<input type="radio" id="c95cb3e43eca4bb9978aff1c2a32378f-6e8fc4f27242431c83f9fcfa70f82837" name="c95cb3e43eca4bb9978aff1c2a32378f" class="tab" ><label for="c95cb3e43eca4bb9978aff1c2a32378f-6e8fc4f27242431c83f9fcfa70f82837" >Android</label>
+<input type="radio" id="3057bb10215d4d71a82d234c1c2e1070-403f288cc264448b95c1381ae0333602" name="3057bb10215d4d71a82d234c1c2e1070" class="tab" checked><label for="3057bb10215d4d71a82d234c1c2e1070-403f288cc264448b95c1381ae0333602" >General</label>
+<input type="radio" id="3057bb10215d4d71a82d234c1c2e1070-99a3df3a0b7c4561bb7dcefb982d9bc2" name="3057bb10215d4d71a82d234c1c2e1070" class="tab" ><label for="3057bb10215d4d71a82d234c1c2e1070-99a3df3a0b7c4561bb7dcefb982d9bc2" >Startup</label>
+<input type="radio" id="3057bb10215d4d71a82d234c1c2e1070-62d1b465e8524b4687aae1e6056e6bfe" name="3057bb10215d4d71a82d234c1c2e1070" class="tab" ><label for="3057bb10215d4d71a82d234c1c2e1070-62d1b465e8524b4687aae1e6056e6bfe" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Sensors.ITemperature
+|Service|Shiny.Sensors.ITemperature|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
-|Static Generated Class|ShinyTemperature</p>
+|Static Generated Class|ShinyTemperature|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
