--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -369,18 +369,18 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="88f9b8ce944749dd8d7d7e4429c7b5e1-74c42f70c4694cda94758b99c48cb81f" name="88f9b8ce944749dd8d7d7e4429c7b5e1" class="tab" checked><label for="88f9b8ce944749dd8d7d7e4429c7b5e1-74c42f70c4694cda94758b99c48cb81f" >General</label>
-<input type="radio" id="88f9b8ce944749dd8d7d7e4429c7b5e1-85d1205af4ec448fb9a298277e41f26a" name="88f9b8ce944749dd8d7d7e4429c7b5e1" class="tab" ><label for="88f9b8ce944749dd8d7d7e4429c7b5e1-85d1205af4ec448fb9a298277e41f26a" >Startup</label>
-<input type="radio" id="88f9b8ce944749dd8d7d7e4429c7b5e1-2f44a599edf1425da755788e26487fe7" name="88f9b8ce944749dd8d7d7e4429c7b5e1" class="tab" ><label for="88f9b8ce944749dd8d7d7e4429c7b5e1-2f44a599edf1425da755788e26487fe7" >Android</label>
-<input type="radio" id="88f9b8ce944749dd8d7d7e4429c7b5e1-40891a95dfe942dab81517ae2bf59932" name="88f9b8ce944749dd8d7d7e4429c7b5e1" class="tab" ><label for="88f9b8ce944749dd8d7d7e4429c7b5e1-40891a95dfe942dab81517ae2bf59932" >iOS</label>
-<input type="radio" id="88f9b8ce944749dd8d7d7e4429c7b5e1-35358425e304452aa34c47abf32b6706" name="88f9b8ce944749dd8d7d7e4429c7b5e1" class="tab" ><label for="88f9b8ce944749dd8d7d7e4429c7b5e1-35358425e304452aa34c47abf32b6706" >Windows</label>
+<input type="radio" id="f765cff9a6ed429a973e17224133f6d2-74f371d65a604e8e83ccd32e0a8358ff" name="f765cff9a6ed429a973e17224133f6d2" class="tab" checked><label for="f765cff9a6ed429a973e17224133f6d2-74f371d65a604e8e83ccd32e0a8358ff" >General</label>
+<input type="radio" id="f765cff9a6ed429a973e17224133f6d2-5b44978698ff43e58f370677d1fc88d8" name="f765cff9a6ed429a973e17224133f6d2" class="tab" ><label for="f765cff9a6ed429a973e17224133f6d2-5b44978698ff43e58f370677d1fc88d8" >Startup</label>
+<input type="radio" id="f765cff9a6ed429a973e17224133f6d2-98ecbcb66c3245bf8e86e9755c190e93" name="f765cff9a6ed429a973e17224133f6d2" class="tab" ><label for="f765cff9a6ed429a973e17224133f6d2-98ecbcb66c3245bf8e86e9755c190e93" >Android</label>
+<input type="radio" id="f765cff9a6ed429a973e17224133f6d2-a3bbc6c47b0e42e3bc3b3c871ef23892" name="f765cff9a6ed429a973e17224133f6d2" class="tab" ><label for="f765cff9a6ed429a973e17224133f6d2-a3bbc6c47b0e42e3bc3b3c871ef23892" >iOS</label>
+<input type="radio" id="f765cff9a6ed429a973e17224133f6d2-91cbf211744841fdb2af3461bd8ed112" name="f765cff9a6ed429a973e17224133f6d2" class="tab" ><label for="f765cff9a6ed429a973e17224133f6d2-91cbf211744841fdb2af3461bd8ed112" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.ILocalize
+|Service|Shiny.ILocalize|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Framework/" target="Shiny.Framework"><img src="https://img.shields.io/nuget/v/Shiny.Framework.svg?style=for-the-badge&label=Shiny.Framework" /></a>|
-|Static Generated Class|</p>
+|Static Generated Class||</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
