--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -367,18 +367,18 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="484afdbd15564c4b8bceae5f052a5713-46971aeac2394dd6a08106727327d698" name="484afdbd15564c4b8bceae5f052a5713" class="tab" checked=""><label for="484afdbd15564c4b8bceae5f052a5713-46971aeac2394dd6a08106727327d698">General</label>
-<input type="radio" id="484afdbd15564c4b8bceae5f052a5713-285bd011a6d04255a51624039aae8a16" name="484afdbd15564c4b8bceae5f052a5713" class="tab"><label for="484afdbd15564c4b8bceae5f052a5713-285bd011a6d04255a51624039aae8a16">Startup</label>
-<input type="radio" id="484afdbd15564c4b8bceae5f052a5713-6fa42d2767cb47d985c830bf84db4187" name="484afdbd15564c4b8bceae5f052a5713" class="tab"><label for="484afdbd15564c4b8bceae5f052a5713-6fa42d2767cb47d985c830bf84db4187">Android</label>
-<input type="radio" id="484afdbd15564c4b8bceae5f052a5713-466a8607663a493da9fd9cbcfed3b8ae" name="484afdbd15564c4b8bceae5f052a5713" class="tab"><label for="484afdbd15564c4b8bceae5f052a5713-466a8607663a493da9fd9cbcfed3b8ae">iOS</label>
-<input type="radio" id="484afdbd15564c4b8bceae5f052a5713-90229fa5da834c9986626149661cf618" name="484afdbd15564c4b8bceae5f052a5713" class="tab"><label for="484afdbd15564c4b8bceae5f052a5713-90229fa5da834c9986626149661cf618">Windows</label>
+<input type="radio" id="ef6824a50a5d4eca9d5be5576bdda6fe-d3508031f41d44c3b95ab95ea0213438" name="ef6824a50a5d4eca9d5be5576bdda6fe" class="tab" checked=""><label for="ef6824a50a5d4eca9d5be5576bdda6fe-d3508031f41d44c3b95ab95ea0213438">General</label>
+<input type="radio" id="ef6824a50a5d4eca9d5be5576bdda6fe-757d964fc59a45248d8ad3dd2795a106" name="ef6824a50a5d4eca9d5be5576bdda6fe" class="tab"><label for="ef6824a50a5d4eca9d5be5576bdda6fe-757d964fc59a45248d8ad3dd2795a106">Startup</label>
+<input type="radio" id="ef6824a50a5d4eca9d5be5576bdda6fe-57284f7129054503bc3e50582fb6ab72" name="ef6824a50a5d4eca9d5be5576bdda6fe" class="tab"><label for="ef6824a50a5d4eca9d5be5576bdda6fe-57284f7129054503bc3e50582fb6ab72">Android</label>
+<input type="radio" id="ef6824a50a5d4eca9d5be5576bdda6fe-0c37c8a364004105b3c6cb5b8d8c40d7" name="ef6824a50a5d4eca9d5be5576bdda6fe" class="tab"><label for="ef6824a50a5d4eca9d5be5576bdda6fe-0c37c8a364004105b3c6cb5b8d8c40d7">iOS</label>
+<input type="radio" id="ef6824a50a5d4eca9d5be5576bdda6fe-97163fec413f497dac1f3d27addf3c7d" name="ef6824a50a5d4eca9d5be5576bdda6fe" class="tab"><label for="ef6824a50a5d4eca9d5be5576bdda6fe-97163fec413f497dac1f3d27addf3c7d">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Net.Http.IHttpTransferManager
+|Service|Shiny.Net.Http.IHttpTransferManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Net.Http/" target="Shiny.Net.Http"><img src="https://img.shields.io/nuget/v/Shiny.Net.Http.svg?style=for-the-badge&amp;label=Shiny.Net.Http"></a>|
-|Static Generated Class|ShinyHttpTransfers</p>
+|Static Generated Class|ShinyHttpTransfers|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
@@ -453,18 +453,18 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="524fd0ffedc349579cdd149ed124845c-7ddfe3f308fd4d4cbf17c33c7e50f71e" name="524fd0ffedc349579cdd149ed124845c" class="tab" checked=""><label for="524fd0ffedc349579cdd149ed124845c-7ddfe3f308fd4d4cbf17c33c7e50f71e">General</label>
-<input type="radio" id="524fd0ffedc349579cdd149ed124845c-2a5f2d2ddd314e6cbf3477ef510e296d" name="524fd0ffedc349579cdd149ed124845c" class="tab"><label for="524fd0ffedc349579cdd149ed124845c-2a5f2d2ddd314e6cbf3477ef510e296d">Startup</label>
-<input type="radio" id="524fd0ffedc349579cdd149ed124845c-d7434da7f87043febac8da6260109a2c" name="524fd0ffedc349579cdd149ed124845c" class="tab"><label for="524fd0ffedc349579cdd149ed124845c-d7434da7f87043febac8da6260109a2c">Android</label>
-<input type="radio" id="524fd0ffedc349579cdd149ed124845c-8ca2ca3d86694f278d85140e42ccd8e6" name="524fd0ffedc349579cdd149ed124845c" class="tab"><label for="524fd0ffedc349579cdd149ed124845c-8ca2ca3d86694f278d85140e42ccd8e6">iOS</label>
-<input type="radio" id="524fd0ffedc349579cdd149ed124845c-00447f8e88244162aa5bb800869d0ec9" name="524fd0ffedc349579cdd149ed124845c" class="tab"><label for="524fd0ffedc349579cdd149ed124845c-00447f8e88244162aa5bb800869d0ec9">Windows</label>
+<input type="radio" id="466f872ddf5147d4b95e6e4414ca8c43-8749b2b0d33b4ffa82161f62140829d2" name="466f872ddf5147d4b95e6e4414ca8c43" class="tab" checked=""><label for="466f872ddf5147d4b95e6e4414ca8c43-8749b2b0d33b4ffa82161f62140829d2">General</label>
+<input type="radio" id="466f872ddf5147d4b95e6e4414ca8c43-aea27278bb58417bbd0466b61b78c2df" name="466f872ddf5147d4b95e6e4414ca8c43" class="tab"><label for="466f872ddf5147d4b95e6e4414ca8c43-aea27278bb58417bbd0466b61b78c2df">Startup</label>
+<input type="radio" id="466f872ddf5147d4b95e6e4414ca8c43-7611df9f73ae4e6699dacfab346b255f" name="466f872ddf5147d4b95e6e4414ca8c43" class="tab"><label for="466f872ddf5147d4b95e6e4414ca8c43-7611df9f73ae4e6699dacfab346b255f">Android</label>
+<input type="radio" id="466f872ddf5147d4b95e6e4414ca8c43-cbaa1b022f624fc6a7bc6ba2beaaa5c6" name="466f872ddf5147d4b95e6e4414ca8c43" class="tab"><label for="466f872ddf5147d4b95e6e4414ca8c43-cbaa1b022f624fc6a7bc6ba2beaaa5c6">iOS</label>
+<input type="radio" id="466f872ddf5147d4b95e6e4414ca8c43-9755bd38095944d3801c263b570b81d3" name="466f872ddf5147d4b95e6e4414ca8c43" class="tab"><label for="466f872ddf5147d4b95e6e4414ca8c43-9755bd38095944d3801c263b570b81d3">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Net.Http.IHttpTransferManager
+|Service|Shiny.Net.Http.IHttpTransferManager|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Net.Http/" target="Shiny.Net.Http"><img src="https://img.shields.io/nuget/v/Shiny.Net.Http.svg?style=for-the-badge&amp;label=Shiny.Net.Http"></a>|
-|Static Generated Class|ShinyHttpTransfers</p>
+|Static Generated Class|ShinyHttpTransfers|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
