--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -369,17 +369,17 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="caed236d8be14f168adca0698e59d14b-eaedcc29df594a1ba4f651bfa886323c" name="caed236d8be14f168adca0698e59d14b" class="tab" checked><label for="caed236d8be14f168adca0698e59d14b-eaedcc29df594a1ba4f651bfa886323c" >General</label>
-<input type="radio" id="caed236d8be14f168adca0698e59d14b-1196d144d06e4f949c1a7b627c4d1d6d" name="caed236d8be14f168adca0698e59d14b" class="tab" ><label for="caed236d8be14f168adca0698e59d14b-1196d144d06e4f949c1a7b627c4d1d6d" >Startup</label>
-<input type="radio" id="caed236d8be14f168adca0698e59d14b-1d0278f90a44448bb1761cb415bc873b" name="caed236d8be14f168adca0698e59d14b" class="tab" ><label for="caed236d8be14f168adca0698e59d14b-1d0278f90a44448bb1761cb415bc873b" >Android</label>
-<input type="radio" id="caed236d8be14f168adca0698e59d14b-333c2649a54a4468a1e6c54da4b6a782" name="caed236d8be14f168adca0698e59d14b" class="tab" ><label for="caed236d8be14f168adca0698e59d14b-333c2649a54a4468a1e6c54da4b6a782" >iOS</label>
+<input type="radio" id="7eb8b251756040328c3e65b3691b4798-f00867622b8a4bc4a73bab16f614fe33" name="7eb8b251756040328c3e65b3691b4798" class="tab" checked><label for="7eb8b251756040328c3e65b3691b4798-f00867622b8a4bc4a73bab16f614fe33" >General</label>
+<input type="radio" id="7eb8b251756040328c3e65b3691b4798-55d2d0f634284bb7a62351e638e1550e" name="7eb8b251756040328c3e65b3691b4798" class="tab" ><label for="7eb8b251756040328c3e65b3691b4798-55d2d0f634284bb7a62351e638e1550e" >Startup</label>
+<input type="radio" id="7eb8b251756040328c3e65b3691b4798-3d7bfaaef80d41149b15a6f0f808722c" name="7eb8b251756040328c3e65b3691b4798" class="tab" ><label for="7eb8b251756040328c3e65b3691b4798-3d7bfaaef80d41149b15a6f0f808722c" >Android</label>
+<input type="radio" id="7eb8b251756040328c3e65b3691b4798-36cfd8be82564db68c4f69aa32aba915" name="7eb8b251756040328c3e65b3691b4798" class="tab" ><label for="7eb8b251756040328c3e65b3691b4798-36cfd8be82564db68c4f69aa32aba915" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
 |Description||
-|Service|Shiny.Sensors.IProximity
+|Service|Shiny.Sensors.IProximity|
 |NuGet|<a href="https://www.nuget.org/packages/Shiny.Sensors/" target="Shiny.Sensors"><img src="https://img.shields.io/nuget/v/Shiny.Sensors.svg?style=for-the-badge&label=Shiny.Sensors" /></a>|
-|Static Generated Class|ShinyProximity</p>
+|Static Generated Class|ShinyProximity|</p>
 </div>
 <div class="tab__content">
 <pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
